--- a/debian/rules
+++ b/debian/rules
@@ -13,3 +13,6 @@ override_dh_strip:
 override_dh_makeshlibs:
 override_dh_shlibdeps:
 	# pass
+
+override_dh_fixperms:
+	dh_fixperms --exclude /android
