Set permissions and ownership in postinst
Android's make_ext4fs, used to create the sparse ext4 filesystem
images which are written to Android devices via the fastboot protocol,
does not preserve file ownership. With the '-a' option, it sets
ownership via hardcoded uids, guids, filepaths in the make_ext4fs
source, but it won't preserve the ownership of the files it's
bundling. Yuck! Googled again.

As a workaround, set the ownership and permissions of the files in
this package via postinst.

--- a/debian/rules
+++ b/debian/rules
@@ -8,6 +8,9 @@ DESTDIR=debian/android-n7-wifi-aosp
 override_dh_auto_install:
 	cp -a android $(DESTDIR)
 	(cd $(DESTDIR) && ../../restore-meta.sh <../../android.metadata)
+	mkdir -p $(DESTDIR)/usr/share/android-n7-wifi-aosp
+	gzip -9 <android.metadata \
+	        >$(DESTDIR)/usr/share/android-n7-wifi-aosp/android.metadata.gz
 
 override_dh_strip:
 override_dh_makeshlibs:
