Write resolv.conf when DNS in Android changes
This package now contains a symlink for /etc/resolv.conf that might
cause conflicts with other schemes for managing the DNS configuration.
Do something more sophisticated in the future.

--- a/android/init.rc
+++ b/android/init.rc
@@ -509,3 +509,10 @@ service mdnsd /system/bin/mdnsd
     socket mdnsd stream 0660 mdnsr inet
     disabled
     oneshot
+
+service resolvconf /system/bin/generate-resolvconf
+    disabled
+    oneshot
+
+on property:net.dnschange=*
+    start resolvconf
